csrc/tests/codegen_probes/errors/err_code_nonstring.bas
' REJECT: CODE() of a numeric expression (expects a string).
' zxbparser p_code syntax_error_expected_string.
Dim x As uByte
x = Code(5)
Print x
